--- a/readcube_export.bib
+++ b/readcube_export.bib
@@ -1,4 +1,236 @@
-@Tech Report{Jain_Inside_2015,
+@INPROCEEDINGS{Jiang_CodingBased_2012, 
+author={C. Jiang and D. Li and M. Xu and K. Zheng}, 
+booktitle={2012 32nd International Conference on Distributed Computing Systems Workshops}, 
+title={A Coding-based Approach to Mitigate TCP Incast in Data Center Networks}, 
+year={2012}, 
+volume={}, 
+number={}, 
+pages={29-34}, 
+keywords={cloud computing;computer centres;computer networks;network coding;routing protocols;telecommunication congestion control;transport protocols;coding-based approach;mitigate TCP incast;data center networks;cloud computing;routing;transport services;transport protocol;TCP friendly rate control;TFRC;congestion control;Servers;Encoding;Reliability;Decoding;Bandwidth;Protocols;Receivers;TCP Incast;digital fountain;TCP-friendly;goodput}, 
+doi={10.1109/ICDCSW.2012.70}, 
+ISSN={2332-5666}, 
+month={June},}
+
+@inproceedings{Zhou_CCM_2018,
+ author = {Zhou, Yaqiu and Ren, Yongmao and Zhou, Xu and Li, Zhentao and Fan, Pengfei},
+ title = {A Congestion Control Mechanism for Data Center Networks Based on Named Data Networking},
+ booktitle = {Proceedings of the 13th International Conference on Future Internet Technologies},
+ series = {CFI 2018},
+ year = {2018},
+ isbn = {978-1-4503-6466-9},
+ location = {Seoul, Republic of Korea},
+ pages = {6:1--6:6},
+ articleno = {6},
+ numpages = {6},
+ url = {http://doi.acm.org/10.1145/3226052.3226055},
+ doi = {10.1145/3226052.3226055},
+ acmid = {3226055},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Congestion Control, Data Center Networks, Named Data Networking, TCP Incast},
+} 
+
+@article{Zhang_NDN_2014,
+ author = {Zhang, Lixia and Afanasyev, Alexander and Burke, Jeffrey and Jacobson, Van and claffy, kc and Crowley, Patrick and Papadopoulos, Christos and Wang, Lan and Zhang, Beichuan},
+ title = {Named Data Networking},
+ journal = {SIGCOMM Comput. Commun. Rev.},
+ issue_date = {July 2014},
+ volume = {44},
+ number = {3},
+ month = jul,
+ year = {2014},
+ issn = {0146-4833},
+ pages = {66--73},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/2656877.2656887},
+ doi = {10.1145/2656877.2656887},
+ acmid = {2656887},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {future internet architecture, information-centric networking, ndn},
+} 
+
+@Article{Abdelmoniem_SICC_2018,
+author="Abdelmoniem, Ahmed M.
+and Bensaou, Brahim
+and Abu, Amuda James",
+title="Mitigating incast-TCP congestion in data centers with SDN",
+journal="Annals of Telecommunications",
+year="2018",
+month="Apr",
+day="01",
+volume="73",
+number="3",
+pages="263--277",
+abstract="In data center networks (DCNs), the presence of long-lived TCP flows tends to bloat the switch buffers. As a consequence, short-lived TCP-incast traffic suffers repeated losses that often lead to loss recovery via timeout. Because the minimum retransmission timeout (minRTO) in most TCP implementations is fixed to around 200 ms, interactive applications that often generate short-lived incast traffic tend to suffer unnecessarily long delays waiting for the timeout to elapse. The best and most direct solution to such problem would be to customize the minRTO to match DCNs delays; however, this is not always possible; in particular in public data centers where multiple tenants, with various versions of TCP, co-exist. In this paper, we propose to achieve the same result by using techniques and technologies that are already available in most commodity switches and data centers and that do not interfere with the tenant's virtual machines or TCP protocol. In this approach, we rely on the programmable nature of SDN switches and design a SDN-based incast congestion control (SICC) framework, that uses a SDN network application in the controller and a shim-layer in the host hypervisor, to mitigate incast congestion. We demonstrate the performance gains of the proposed scheme via real deployment in a small-scale testbed as well as ns2 simulation experiments in networks of various sizes and settings.",
+issn="1958-9395",
+doi="10.1007/s12243-017-0608-1",
+url="https://doi.org/10.1007/s12243-017-0608-1"
+}
+
+
+
+@INPROCEEDINGS{Yifei_SDNCont_2015, 
+author={Yifei Lu and Shuhong Zhu}, 
+booktitle={2015 IEEE 34th International Performance Computing and Communications Conference (IPCCC)}, 
+title={SDN-based TCP congestion control in data center networks}, 
+year={2015}, 
+volume={}, 
+number={}, 
+pages={1-7}, 
+keywords={computer centres;software defined networking;telecommunication congestion control;SDN-based TCP congestion control;data center networks;software defined networks;SDTCP;centralized control methods;OpenFlow-switch;congestion message;Switches;Receivers;Ports (Computers);Protocols;Throughput;Packet loss;Data center networks;TCP;Incast;Congestion control;SDN}, 
+doi={10.1109/PCCC.2015.7410275}, 
+ISSN={2374-9628}, 
+month={Dec},}
+
+@INPROCEEDINGS{Gholami_ReRoute_SDN_2015, 
+author={M. Gholami and B. Akbari}, 
+booktitle={2015 23rd Iranian Conference on Electrical Engineering}, 
+title={Congestion control in software defined data center networks through flow rerouting}, 
+year={2015}, 
+volume={}, 
+number={}, 
+pages={654-657}, 
+keywords={cloud computing;computer centres;routing protocols;software defined networking;statistical analysis;telecommunication congestion control;telecommunication switching;telecommunication traffic;software defined data center networks;flow rerouting;cloud applications;network design;congestion control mechanism;dynamic traffic;cloud services;software defined networking;SDN;OpenFlow protocol;network links;port statistics;OpenFlow enabled switches;congested link;OpenFlow controller;Mininet;Decision support systems;Electrical engineering;Conferences;data center;congestion control;software-defined network;OpenFlow}, 
+doi={10.1109/IranianCEE.2015.7146295}, 
+ISSN={2164-7054}, 
+month={May},}
+
+@ARTICLE{Hafeez_SDN_2018, 
+author={T. Hafeez and N. Ahmed and B. Ahmed and A. W. Malik}, 
+journal={IEEE Access}, 
+title={Detection and Mitigation of Congestion in SDN Enabled Data Center Networks: A Survey}, 
+year={2018}, 
+volume={6}, 
+number={}, 
+pages={1730-1740}, 
+keywords={computer centres;computer networks;telecommunication congestion control;telecommunication network topology;telecommunication traffic;transport protocols;trees (mathematics);large-scale data centers;shallow switch buffer;TCP incast issue;congestion detection;congestion mitigation;SDN enabled data center networks;commodity hardware switches;multirooted tree topology;many-to-one traffic communication pattern;transmission control protocol;throughput collapse;software-defined networking;network programmability;network centralized control;packet drop;Servers;Control systems;Protocols;Mice;Receivers;Throughput;TCP congestion control;incast solutions;data center;SDN}, 
+doi={10.1109/ACCESS.2017.2780122}, 
+ISSN={2169-3536}, 
+month={},}
+
+@article{Alizadeh_DCTCP_Analysis_2011,
+ author = {Alizadeh, Mohammad and Javanmard, Adel and Prabhakar, Balaji},
+ title = {Analysis of DCTCP: Stability, Convergence, and Fairness},
+ journal = {SIGMETRICS Perform. Eval. Rev.},
+ issue_date = {June 2011},
+ volume = {39},
+ number = {1},
+ month = jun,
+ year = {2011},
+ issn = {0163-5999},
+ pages = {73--84},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/2007116.2007125},
+ doi = {10.1145/2007116.2007125},
+ acmid = {2007125},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {TCP, analysis, congestion control, data center network},
+} 
+
+@article{Sreekumari_NewDCTCP_2016,
+ author = {Sreekumari, Prasanthi and Jung, Jae-Il and Lee, Meejeong},
+ title = {An Early Congestion Feedback and Rate Adjustment Schemes for Many-to-one Communication in Cloud-based Data Center Networks},
+ journal = {Photonic Netw. Commun.},
+ issue_date = {February  2016},
+ volume = {31},
+ number = {1},
+ month = feb,
+ year = {2016},
+ issn = {1387-974X},
+ pages = {23--35},
+ numpages = {13},
+ url = {http://dx.doi.org/10.1007/s11107-015-0526-y},
+ doi = {10.1007/s11107-015-0526-y},
+ acmid = {2884658},
+ publisher = {Springer-Verlag New York, Inc.},
+ address = {Secaucus, NJ, USA},
+ keywords = {Cloud computing, Data center networks, TCP Incast},
+} 
+
+@inproceedings{Vamanan_D2TCP_2012,
+ author = {Vamanan, Balajee and Hasan, Jahangir and Vijaykumar, T.N.},
+ title = {Deadline-aware Datacenter TCP (D2TCP)},
+ booktitle = {Proceedings of the ACM SIGCOMM 2012 Conference on Applications, Technologies, Architectures, and Protocols for Computer Communication},
+ series = {SIGCOMM '12},
+ year = {2012},
+ isbn = {978-1-4503-1419-0},
+ location = {Helsinki, Finland},
+ pages = {115--126},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/2342356.2342388},
+ doi = {10.1145/2342356.2342388},
+ acmid = {2342388},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {cloud services, datacenter, deadline, ecn, oldi, sla, tcp},
+} 
+
+
+@INPROCEEDINGS{Munir_L2DCT_2013, 
+author={A. Munir and I. A. Qazi and Z. A. Uzmi and A. Mushtaq and S. N. Ismail and M. S. Iqbal and B. Khan}, 
+booktitle={2013 Proceedings IEEE INFOCOM}, 
+title={Minimizing flow completion times in data centers}, 
+year={2013}, 
+volume={}, 
+number={}, 
+pages={2157-2165}, 
+keywords={computer centres;Linux;protocols;scheduling;flow completion times minimization;data centers;large-scale online applications;Web search;social networks;advertisement systems;L2DCT;least attained service scheduling discipline;LAS;application software;router hardware;explicit congestion notification marking;ECN;DCTCP;Linux protocol stack;Throughput;Transport protocols;Bandwidth;Oscillators;Hardware;Routing protocols}, 
+doi={10.1109/INFCOM.2013.6567018}, 
+ISSN={0743-166X}, 
+month={April},}
+
+@inproceedings{Judd_Promise_2015,
+ author = {Judd, Glenn},
+ title = {Attaining the Promise and Avoiding the Pitfalls of TCP in the Datacenter},
+ booktitle = {Proceedings of the 12th USENIX Conference on Networked Systems Design and Implementation},
+ series = {NSDI'15},
+ year = {2015},
+ isbn = {978-1-931971-218},
+ location = {Oakland, CA},
+ pages = {145--157},
+ numpages = {13},
+ url = {http://dl.acm.org/citation.cfm?id=2789770.2789781},
+ acmid = {2789781},
+ publisher = {USENIX Association},
+ address = {Berkeley, CA, USA},
+} 
+
+@INPROCEEDINGS{Zhenqian_Shrew_2011, 
+author={Feng, Zhenqian and Bai, Bing and Zhao, Baokang and Su, Jinshu}, 
+booktitle={2011 Seventh International Conference on Mobile Ad-hoc and Sensor Networks}, 
+title={Shrew Attack in Cloud Data Center Networks}, 
+year={2011}, 
+volume={}, 
+number={}, 
+pages={441-445}, 
+keywords={cloud computing;computer network security;shrew attack;cloud data center networks;multitenancy;network performance isolation;low-rate denial-of-service attack;normal external tenant;counter-DoS mechanisms;Switches;Servers;Receivers;Cloud computing;Probes;Computer crime;Data Center Network;Denial of Service;TCP}, 
+doi={10.1109/MSN.2011.71}, 
+ISSN={}, 
+month={Dec},}
+
+@inproceedings{Zhenqian_EPVDCN_2010,
+ author = {Feng, Zhenqian and Wu, Haitao and Su, Jinshu},
+ title = {Exploring Potential Vulnerabilities in Data Center Network},
+ booktitle = {Proceedings of the ACM CoNEXT Student Workshop},
+ series = {CoNEXT '10 Student Workshop},
+ year = {2010},
+ isbn = {978-1-4503-0468-9},
+ location = {Philadelphia, Pennsylvania},
+ pages = {12:1--12:2},
+ articleno = {12},
+ numpages = {2},
+ url = {http://doi.acm.org/10.1145/1921206.1921219},
+ doi = {10.1145/1921206.1921219},
+ acmid = {1921219},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {TCP, data center network, denial of service},
+} 
+
+
+@TechReport{Jain_Inside_2015,
 author = {Jain, Navendu and Kamara, Seny},
 title = {Attacking Data Center Networks from the Inside},
 year = {2015},
@@ -432,16 +664,24 @@ month={May},}
 }
 
 @article{Sreekumari_Transport_2016,
-  issn={{1387-974X}},
-  author={Sreekumari, Prasanthi and Jung, Jae-il},
-  pages={112-128},
-  volume={31},
-  number={1},
-  doi={10.1007/s11107-015-0550-y},
-  journal={Photonic Netw Commun},
-  year={2016},
-  title={Transport protocols for data center networks: a survey of issues, solutions and challenges}
-}
+ author = {Sreekumari, Prasanthi and Jung, Jae-Il},
+ title = {Transport Protocols for Data Center Networks: A Survey of Issues, Solutions and Challenges},
+ journal = {Photonic Netw. Commun.},
+ issue_date = {February  2016},
+ volume = {31},
+ number = {1},
+ month = feb,
+ year = {2016},
+ issn = {1387-974X},
+ pages = {112--128},
+ numpages = {17},
+ url = {http://dx.doi.org/10.1007/s11107-015-0550-y},
+ doi = {10.1007/s11107-015-0550-y},
+ acmid = {2884661},
+ publisher = {Springer-Verlag New York, Inc.},
+ address = {Secaucus, NJ, USA},
+ keywords = {Data center networks, Issues, Performance degradation, Survey, TCP},
+} 
 
 @article{Ren_A_2014,
  author = {Ren, Yongmao and Zhao, Yu and Liu, Pei and Dou, Ke and Li, Jun},
